<resources>
    <string name="app_name">FirebaseApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_credentials">"Invalid email and/or password"</string>
    <string name="select_collection">Select Collection</string>
    <string name="movies">Movies</string>
    <string name="games">Games</string>
    <string name="books">Books</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_add_new_item">add new item</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sign_in_to_culturehub">Sign in to CultureHub</string>
    <string name="movie_title_temp">MOVIE TITLE</string>
    <string name="author_temp">AUTHOR</string>
    <string name="genre_temp">GENRE</string>
    <string name="year_temp">YEAR</string>
</resources>