<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    android:layout_marginBottom="10dp"
    android:layout_margin="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/record_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_movie_96"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/separator"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <View
            android:id="@+id/separator"
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:background="#A0A0AF"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_icon"/>
        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/separator"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_title_temp"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/separator"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/author_tv"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/author_temp"/>
            <TextView
                android:id="@+id/genre_tv"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/genre_temp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/year_tv"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/year_temp"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
