<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MenuFragment">

    <TextView
        android:id="@+id/greeting_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hello User"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_collection"
        app:layout_constraintTop_toBottomOf="@id/greeting_tv"
        app:layout_constraintBottom_toTopOf="@id/movies_card"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/movies_card"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/games_card"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/movie_icon_vw"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_movie_96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#A0A0AF"
                app:layout_constraintStart_toEndOf="@id/movie_icon_vw"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/movie_icon_vw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/movies"
                android:textSize="30sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/games_card"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        app:cardElevation="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/game_icon_vw"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_videogame_asset_96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#A0A0AF"
                app:layout_constraintStart_toEndOf="@id/game_icon_vw"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/game_icon_vw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/games"
                android:textSize="30sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/books_card"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/games_card"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/book_icon_vw"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_menu_book_96"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#A0A0AF"
                app:layout_constraintStart_toEndOf="@id/book_icon_vw"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/book_icon_vw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/books"
                android:textSize="30sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>